clusters/managed/default/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app n8n
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://n8n.trusted.nirmalhk7.com"
    gethomepage.dev/group: Automation
    gethomepage.dev/description: "Workflow automation"
    gethomepage.dev/icon: *app
    gethomepage.dev/app: *app
    gethomepage.dev/name: n8n
    gethomepage.dev/weight: "10"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=n8n"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`n8n.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: *app
          port: 5678
